scrollbar color, fix paths

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -12,6 +12,7 @@ body, html {
     background: $background;
     font-family: 'Fira Sans', sans-serif;
     overflow-x: hidden;
+    scrollbar-color: #272f33 $background;
 }
 
 a {
